<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.imatia.implatform.rowbot2</groupId>
        <artifactId>rowbot2-data-importer</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>rowbot2-data-importer-application</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.imatia.implatform.rowbot2</groupId>
            <artifactId>rowbot2-data-importer-domain</artifactId>
        </dependency>
        <dependency>
            <groupId>com.imatia.implatform.rowbot2</groupId>
            <artifactId>rowbot2-data-importer-infrastructure-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.imatia.implatform.rowbot2</groupId>
            <artifactId>rowbot2-data-importer-infrastructure-out-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>com.imatia.implatform.rowbot2</groupId>
            <artifactId>rowbot2-data-importer-infrastructure-out-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <!-- Third parties -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>12.6.1.jre11</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>23.26.0.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.2</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>
    </dependencies>

</project>